--- a/src/components/todoList/index.module.scss
+++ b/src/components/todoList/index.module.scss
@@ -1,9 +1,10 @@
 .todoList{
-  width: 700px;
-  margin-left: 10%;
+  width: 1200px;
   background: aquamarine;
+  margin: 0 auto;
+  text-align: center;
 .addTodoBlock{
-  margin-bottom: 10px;
+  margin: 0 auto 30px;
   h2{
     span,button{
       margin: 0 10px;
@@ -15,11 +16,14 @@
 
 
   .items{
-    .item{
-      padding: 5px;
-      display: grid;
-      grid-template-columns: 80% 10% 10%;
-      border: 2px solid;
-    }
+    margin: 0 auto;
+    padding: 0 0 30px 0;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-auto-flow: row;
+    gap: 10px;
+    justify-items: center;
+    align-items: center;
+
   }
 }
