--- a/src/components/todoList/index.module.scss
+++ b/src/components/todoList/index.module.scss
@@ -17,7 +17,7 @@
 
   .items{
     margin: 0 auto;
-    padding: 0 0 30px 0;
+    padding: 3px 0 30px 0;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-auto-flow: row;
